info: Initial Release

--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -1,5 +1,22 @@
 [mod-name]
-title=YOUR MOD TITLE
+title=Intercontinental Rocketry (Seven surfaces per Planet)
 
 [mod-description]
 description=YOUR MOD DESCRIPTION
+
+[subplanet-name]
+east=E
+south=S
+west=W
+north=N
+temperate-north=NT
+temperate-south=ST
+
+[subplanet-description]
+east=East Equatorial
+south=South Polar
+west=West Equatorial
+north=North Polar
+temperate-north=North Temperate
+temperate-south=South Temperate
+
